--- a/index.html
+++ b/index.html
@@ -249,31 +249,46 @@
       </div>
     </article>
     </section>
-<section class="grid-container">
-  <article>
-    <!-- <div> -->
+<section class="wrap">
+  <div>
     <h2>Milancelos</h2>
     <h3>shop the collection</h3>
-  <!-- </div> -->
-  </article>
+  </div>
   <article class="trendy">
     <img src="./assets/IMG_8855.webp" alt="dress">
     <h2> Mens Shirts</h2>
     <p> Elevate your style instantly. Click now for timeless sophistication</p>
-    <button> shop now</button>
+    <button>shop now</button>
   </article>
-  <article class="acessories">
+  <article class="trendy">
     <img src="./assets/WhatsAppImage2023-10-26at13.35.43.jpg" alt="Accessories">
     <h2> Accessories</h2>
     <p>Accessorize your style. Click now for a touch of elegance with our curated collection</p>
     <button>shop now</button>
   </article>
 </section>
-         
-
-
-
-    
-    </main>
+ </main>
+ <footer>
+  <div class="policy">
+  <div>
+  <p> Information</p>
+  <p>Cancellation &returns</p>
+  <p>Shipping policy</p>
+  <p>Terms of service</p>
+</div>
+<div>
+  <p> Customer service</p>
+  <p>Cancellation &returns</p>
+  <p>Shipping policy</p>
+  <p>Terms of service</p>
+</div>
+<div>
+  <p> Customer service</p>
+  <p>Cancellation &returns</p>
+  <p>Shipping policy</p>
+  <p>Terms of service</p>
+</div>
+</div>
+</footer>
   </body>
 </html>
