--- a/index.html
+++ b/index.html
@@ -54,12 +54,16 @@
         <div class="flex-column">
         <h1>Momentum</h1>
         <p>Empower your style journey here</p>
-        <button>Shop The collection</button>
+        <button class="button1">Shop The collection</button>
+        <!-- <div class="button2">
+        <button class="button4"><img src="./assets/circle.PNG" alt="circle" class="circle"></button>
+        <button class="button5"> <img src="./assets/circle.PNG" alt="circle" class="circle"></button>
+      </div> -->
       </div>
     </section>
       <div class="flex-column" id="share">
-        <a href="#"><img src="./assets/share.png" alt=" share button"></a>
-        <a href="header"><img src="./assets/arrow.png" alt="toparrow"></a>
+        <a href=""><img src="./assets/share.png" alt=" share button"></a>
+        <a href="#hero"><img src="./assets/arrow.png" alt="toparrow"></a>
       </div>
      
         <section class="flex-container" id="latest">
@@ -69,7 +73,7 @@
    <section id="collections">
     <article class="flex-raw">
       <div class="product">
-    <a href="https://peprikka.com/products/pk001-the-blue-split-leaf-resort-shirt" target="_blank" rel="noopener">
+    <a href="https://peprikka.com/products/zazzle-resort-shirt" target="_blank" rel="noopener">
 
         <img src="./assets/dress1.webp" alt="dress2" class="dress">
       
